src/objects/COPE_SignUp__c.object
<CustomObject>
    <description>This is use for COPE10X10.</description>
    <fields>
        <fullName>Actual_Amount__c</fullName>
        <formula>Amount__c  -  COPE_Pledge_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual  Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Cope Amount Pledge</description>
        <label>COPE Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amt__c</fullName>
        <formula>IF(Actual_Amount__c&lt;0,  Amount__c , Actual_Amount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>COPE_Card_Origination__c</fullName>
        <label>COPE Card Origination</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A. CRE</fullName>
                </value>
                <value>
                    <fullName>B. NEO</fullName>
                </value>
                <value>
                    <fullName>C. Political Ninja Blitz</fullName>
                </value>
                <value>
                    <fullName>D. Political Action</fullName>
                </value>
                <value>
                    <fullName>E. Ratification</fullName>
                </value>
                <value>
                    <fullName>F. Mail</fullName>
                </value>
                <value>
                    <fullName>G. Walk-through/1on1 convo</fullName>
                </value>
                <value>
                    <fullName>H. 80% Campaign</fullName>
                </value>
                <value>
                    <fullName>F. Ratification</fullName>
                    <isActive>false</isActive>
                    <label>F. Ratification</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>COPE_Pledge_Amount__c</fullName>
        <description>COPE Pledge Amount</description>
        <formula>Member_Name1__r.COPE_Pledge_10X10__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is the COPE Pledge in Contact record; COPE Pledge Amount in the Membership db;
COPE_Pledge_10X10__c; updated every quarter;</inlineHelpText>
        <label>Qrtly COPE Pledge Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>COPE_Pledge_Static__c</fullName>
        <label>COPE Pledge Static</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CP__c</fullName>
        <formula>Member_Name1__r.COPE_Pledge_10X10__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Card_Goal__c</fullName>
        <formula>if(Card_Number__c&gt;=10, 10, Card_Number__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Card Goal</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Card_Number__c</fullName>
        <description>Computes the card number based on Actual Increase.</description>
        <formula>IF( Actual_Amount__c &lt; 5,0,
IF(Actual_Amount__c &gt; 0 &amp;&amp; Actual_Amount__c &gt;= 5 &amp;&amp;  Actual_Amount__c &lt; 10, 0.5,
IF(Actual_Amount__c &gt;= 10 &amp;&amp; MOD(Actual_Amount__c ,5)=0,Actual_Amount__c / 10,
IF(Actual_Amount__c  &gt;= 10 &amp;&amp; MOD(Actual_Amount__c ,5)&lt;&gt; 0 &amp;&amp; MOD(Actual_Amount__c ,10)&gt;=5,FLOOR(Actual_Amount__c /10)+0.5,
IF(Actual_Amount__c  &gt;= 10 &amp;&amp; MOD(Actual_Amount__c ,5)&lt;&gt; 0 &amp;&amp; MOD(Actual_Amount__c ,10)&lt;5,FLOOR(Actual_Amount__c /10),NULL
)
)
)
)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Card Number</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Collected_by_Member__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collected by Member</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>COPE Sign-Ups (Collected by Member:)</relationshipLabel>
        <relationshipName>COPE_Sign_Ups_by_Contact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Collected_by_Staff__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collected by Staff</label>
        <referenceTo>User</referenceTo>
        <relationshipName>COPE_Sign_Ups_Staff</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Collected_by__c</fullName>
        <formula>IF( ISBLANK( Collected_by_Staff__c ) ,  IF( ISBLANK(Collected_by_Member__r.FirstName),   Seat__r.SeatHolder__r.LastName &amp; &quot;, &quot; &amp; Seat__r.SeatHolder__r.FirstName,Collected_by_Member__r.LastName &amp; &quot;, &quot; &amp;  Collected_by_Member__r.FirstName) ,  Collected_by_Staff__r.LastName &amp; &quot;, &quot; &amp; Collected_by_Staff__r.FirstName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Collected by</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Constituency__c</fullName>
        <description>logical seat</description>
        <label>Constituency</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Id__c</fullName>
        <formula>Member_Name1__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Coordinator__c</fullName>
        <formula>Seat__r.Coordinator__r.FirstName &amp; &quot; &quot; &amp; Seat__r.Coordinator__r.LastName</formula>
        <label>Coordinator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Card_Collected__c</fullName>
        <label>Date Card Collected</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <formula>Member_Name1__r.Department</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Department</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District_Name__c</fullName>
        <formula>Seat__r.DistrictName__c</formula>
        <label>District Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>District__c</fullName>
        <description>District associated with Member whose card was collected</description>
        <label>District</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DivisionName__c</fullName>
        <description>non-normalized field</description>
        <label>DivisionName</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <formula>Text(Member_Name1__r.Division_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EL__c</fullName>
        <formula>IF (Contains( Member_Name1__r.Surveys_Encoded__c, &quot;AJMY&quot;), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eboard_Ecomm_Name__c</fullName>
        <formula>IF(Seat__r.Contact_Name__c=&quot;-SubSeatId-&quot;, &quot;&quot;, Seat__r.Contact_Name__c)</formula>
        <label>Eboard/Ecomm Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eboard_Full_Name__c</fullName>
        <formula>Eboard_Name__r.LastName &amp; &quot;, &quot; &amp;   Eboard_Name__r.FirstName &amp; &quot;-&quot; &amp; TEXT(Eboard_Name__r.Executive_Body_Title__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eboard Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eboard_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Eboard Name</description>
        <label>Eboard Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.EBoard__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Search for an Eboard or Ecomm Member</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Cope</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Employer_Region__c</fullName>
        <formula>TEXT(Member_Name1__r.Account.Region__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Employer Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Executive_Title__c</fullName>
        <formula>IF(  Seat__c  &lt;&gt; &quot;&quot;,  Seat__r.Title__c ,  TEXT(Eboard_Name__r.Executive_Body_Title__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Executive Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_COPE_Payment_Date__c</fullName>
        <description>Last COPE Payment Date;</description>
        <formula>Member_Name1__r.Cope_Payment_Date__c</formula>
        <inlineHelpText>This is the COPE Date in Contact record; Last COPE Payment date in the Membership db;</inlineHelpText>
        <label>Last COPE Payment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_COPE_Payment__c</fullName>
        <description>Last COPE Payment made;</description>
        <formula>Member_Name1__r.Cope_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This COPE Amount in Contact record; Last payment made in the Membership db;</inlineHelpText>
        <label>Last COPE Payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Member_Employer_Name__c</fullName>
        <formula>Member_Name1__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member Employer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_First_Name__c</fullName>
        <description>Member First Name</description>
        <label>Member First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Full_Name__c</fullName>
        <formula>Member_Name1__r.FirstName &amp; &quot; &quot; &amp; Member_Name1__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Id__c</fullName>
        <formula>Member_Name1__r.MemberID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Last_Name__c</fullName>
        <description>Member Last Name</description>
        <label>Member Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Name1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member Name</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Contact.Division_Type__c</field>
                <operation>notEqual</operation>
                <value>New Organizing</value>
            </filterItems>
            <filterItems>
                <field>Contact.Division_Type__c</field>
                <operation>equals</operation>
                <value>NULL</value>
            </filterItems>
            <infoMessage>Select a Member</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipName>COPE1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org1__c</fullName>
        <description>Use in Process Builder to check if Organizer 1 is available.</description>
        <formula>IF(NOT(ISBLANK(Seat__r.Organizer__c)), TRUE, FALSE)</formula>
        <label>Org1?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Organizer__c</fullName>
        <formula>Seat__r.Organizer__r.FirstName &amp; &quot; &quot; &amp; Seat__r.Organizer__r.LastName</formula>
        <label>Organizer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pledge_Amount__c</fullName>
        <description>This is use in the report. Preferred label name.</description>
        <formula>Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pledge Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Preactive_COPE_Signer_Employer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Preactive COPE Signer Employer</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>COPE_Sign_Ups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Preactive_COPE_Signer__c</fullName>
        <label>Preactive COPE Signer</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prev_COPE_Pledge__c</fullName>
        <description>This is use in the report. Preferred label name.</description>
        <formula>COPE_Pledge_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prev COPE Pledge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>RL__c</fullName>
        <formula>IF (Contains( Member_Name1__r.Surveys_Encoded__c, &quot;AISY&quot;), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Regional_Director__c</fullName>
        <formula>IF(  ISNULL(  Member_Name1__c ) ||  ISBLANK(Member_Name1__c),   Preactive_COPE_Signer_Employer__r.Regional_Director__r.FirstName &amp; &apos; &apos; &amp; Preactive_COPE_Signer_Employer__r.Regional_Director__r.LastName,    Member_Name1__r.Account.Regional_Director__r.FirstName &amp; &apos; &apos; &amp; Member_Name1__r.Account.Regional_Director__r.LastName  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Regional Director</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revoke__c</fullName>
        <formula>IF( Verified_COPE_Pledge_Date__c  &gt;  Date_Card_Collected__c  &amp;&amp;  (Verified_COPE_Pledge__c  &lt;  Amount__c || Verified_COPE_Pledge__c  &lt;= 0 ) , True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revoke</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Seat_Id__c</fullName>
        <formula>Seat__r.SubSeatID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Seat Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Seat_Name__c</fullName>
        <formula>Seat__r.SeatName__c</formula>
        <label>Seat Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seat_Status__c</fullName>
        <formula>IF(  Seat__r.SeatHolder__c =&quot;&quot;, &apos;Vacant Seat&apos;, &apos;Seated&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Seat Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seat__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>EBoardSeats</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>EBoardSeats__c.E_Board_Year__c</field>
                <operation>equals</operation>
                <value>2017</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>EBoardSeats__c</referenceTo>
        <relationshipLabel>COPE Sign-Ups</relationshipLabel>
        <relationshipName>COPE_Sign_Ups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Verified_COPE_Pledge_Date__c</fullName>
        <formula>Member_Name1__r.CopePledgeDate__c</formula>
        <label>Verified COPE Pledge Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Verified_COPE_Pledge__c</fullName>
        <formula>Member_Name1__r.COPE_Pledge__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Verified COPE Pledge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>COPE Sign-Up</label>
    <listViews>
        <fullName>Hospital_COPE_10X10</fullName>
        <columns>COPE_Card_Origination__c</columns>
        <columns>NAME</columns>
        <columns>Eboard_Ecomm_Name__c</columns>
        <columns>Member_Full_Name__c</columns>
        <columns>Amount__c</columns>
        <columns>Member_Employer_Name__c</columns>
        <columns>Actual_Amount__c</columns>
        <columns>Card_Number__c</columns>
        <columns>Date_Card_Collected__c</columns>
        <columns>Preactive_COPE_Signer__c</columns>
        <columns>Seat__c</columns>
        <columns>Coordinator__c</columns>
        <columns>Organizer__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Division__c</field>
            <operation>equals</operation>
            <value>Hospital,HOSPITAL</value>
        </filters>
        <filters>
            <field>Date_Card_Collected__c</field>
            <operation>greaterOrEqual</operation>
            <value>3/3/2018</value>
        </filters>
        <filters>
            <field>COPE_Card_Origination__c</field>
            <operation>equals</operation>
            <value>E. Ratification</value>
        </filters>
        <label>Hospital Current Quarter Round 15</label>
        <language>en_US</language>
        <sharedTo>
            <group>AAs_Hospital</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Hospital_COPE_10X10_13</fullName>
        <columns>COPE_Card_Origination__c</columns>
        <columns>NAME</columns>
        <columns>Eboard_Ecomm_Name__c</columns>
        <columns>Member_Full_Name__c</columns>
        <columns>Amount__c</columns>
        <columns>Member_Employer_Name__c</columns>
        <columns>Actual_Amount__c</columns>
        <columns>Card_Number__c</columns>
        <columns>Date_Card_Collected__c</columns>
        <columns>Preactive_COPE_Signer__c</columns>
        <columns>Seat__c</columns>
        <columns>Coordinator__c</columns>
        <columns>Organizer__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Division__c</field>
            <operation>equals</operation>
            <value>Hospital,HOSPITAL</value>
        </filters>
        <filters>
            <field>Date_Card_Collected__c</field>
            <operation>greaterThan</operation>
            <value>8/1/2017</value>
        </filters>
        <filters>
            <field>Date_Card_Collected__c</field>
            <operation>lessThan</operation>
            <value>12/5/2017</value>
        </filters>
        <label>Hospital Round 13</label>
        <language>en_US</language>
        <sharedTo>
            <group>AAs_Hospital</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Kaiser_COPE_10X10</fullName>
        <columns>NAME</columns>
        <columns>Eboard_Ecomm_Name__c</columns>
        <columns>Member_Full_Name__c</columns>
        <columns>Amount__c</columns>
        <columns>Member_Employer_Name__c</columns>
        <columns>Actual_Amount__c</columns>
        <columns>Card_Number__c</columns>
        <columns>Date_Card_Collected__c</columns>
        <columns>Preactive_COPE_Signer__c</columns>
        <columns>Preactive_COPE_Signer_Employer__c</columns>
        <columns>Seat__c</columns>
        <columns>Coordinator__c</columns>
        <columns>Organizer__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Division__c</field>
            <operation>equals</operation>
            <value>Kaiser,KAISER</value>
        </filters>
        <filters>
            <field>Date_Card_Collected__c</field>
            <operation>greaterOrEqual</operation>
            <value>3/17/2017</value>
        </filters>
        <label>Kaiser Current Quarter Round 12</label>
        <language>en_US</language>
        <sharedTo>
            <group>AAs_Kaiser</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>melisa_test</fullName>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Eboard_Ecomm_Name__c</columns>
        <columns>Member_Full_Name__c</columns>
        <columns>Amount__c</columns>
        <columns>Member_Employer_Name__c</columns>
        <columns>Actual_Amount__c</columns>
        <columns>Card_Number__c</columns>
        <columns>Collected_by__c</columns>
        <columns>Collected_by_Member__c</columns>
        <columns>Date_Card_Collected__c</columns>
        <columns>Seat__c</columns>
        <columns>Coordinator__c</columns>
        <columns>Organizer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Division__c</field>
            <operation>equals</operation>
            <value>Hospital</value>
        </filters>
        <filters>
            <field>Date_Card_Collected__c</field>
            <operation>equals</operation>
            <value>THIS_YEAR</value>
        </filters>
        <filters>
            <field>Seat__c</field>
            <operation>equals</operation>
            <value>EBS00450,EBS00451</value>
        </filters>
        <label>melisa test</label>
        <language>en_US</language>
        <sharedTo>
            <group>AAs_Hospital</group>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>COPE-{0000}</displayFormat>
        <label>COPE Sign-Up Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>COPE Sign-Ups</pluralLabel>
    <recordTypes>
        <fullName>COPE_Master</fullName>
        <active>true</active>
        <description>Use this for Kaiser and Hospital.</description>
        <label>COPE Master</label>
    </recordTypes>
    <recordTypes>
        <fullName>COPE_Staff</fullName>
        <active>true</active>
        <description>COPE Staff</description>
        <label>COPE Staff</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Date_Collected_Validation_1</fullName>
        <active>true</active>
        <description>Date must not be &lt; 6/3/2015;</description>
        <errorConditionFormula>Date_Card_Collected__c &lt;  DATE(2015,6,3)</errorConditionFormula>
        <errorDisplayField>Date_Card_Collected__c</errorDisplayField>
        <errorMessage>Date must be greater than or equal to 6/3/2015.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>When_Eboard_is_blank</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(  Eboard_Ecomm_Name__c ) &amp;&amp;  ISBLANK( TEXT(COPE_Card_Origination__c) )</errorConditionFormula>
        <errorDisplayField>COPE_Card_Origination__c</errorDisplayField>
        <errorMessage>Please select a card origination.</errorMessage>
    </validationRules>
</CustomObject>